--- a/.azure-pipelines/templates/automation_test.yml
+++ b/.azure-pipelines/templates/automation_test.yml
@@ -30,10 +30,10 @@ steps:
 
       if [[ "$(Build.Reason)" == "PullRequest" && "${{ parameters.fullTest }}" == 'False' ]]; then
         echo "Running incremental test"
-        azdev test --series --no-exitfirst --repo=./ --src=HEAD --tgt=origin/$(System.PullRequest.TargetBranch) --cli-ci --profile ${{ parameters.profile }} --verbose
+        azdev test --no-exitfirst --repo=./ --src=HEAD --tgt=origin/$(System.PullRequest.TargetBranch) --cli-ci --profile ${{ parameters.profile }} --verbose --pytest-args --forked
       else
         echo "Running full test"
-        azdev test --series --no-exitfirst --profile ${{ parameters.profile }} --verbose
+        azdev test --no-exitfirst --profile ${{ parameters.profile }} --verbose --pytest-args --forked
       fi
     displayName: "Test on Profile ${{ parameters.profile }}"
     env:
