--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -77,6 +77,7 @@ azure-mgmt-search==8.0.0
 azure-mgmt-security==0.6.0
 azure-mgmt-servicebus==0.6.0
 azure-mgmt-servicefabric==0.5.0
+azure-mgmt-servicefabricmanagedclusters==1.0.0b1
 azure-mgmt-signalr==0.4.0
 azure-mgmt-sql==0.26.0
 azure-mgmt-sqlvirtualmachine==0.5.0
