--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -21,7 +21,7 @@
 /src/azure-cli/azure/cli/command_modules/appconfig/ @shenmuxiaosen @avanigupta @qwordy
 /src/azure-cli/azure/cli/command_modules/appservice/ @qwordy @Juliehzl
 /src/azure-cli/azure/cli/command_modules/aro/ @mjudeikis @jim-minter
-/src/azure-cli/azure/cli/command_modules/backup/ @dragonfly91 @fengzhou-msft
+/src/azure-cli/azure/cli/command_modules/backup/ @dragonfly91 @fengzhou-msft @qwordy @akshayneema
 /src/azure-cli/azure/cli/command_modules/batch/ @bgklein @gingi @dpwatrous @paterasMSFT @qwordy
 /src/azure-cli/azure/cli/command_modules/batchai/ @AlexanderYukhanov
 /src/azure-cli/azure/cli/command_modules/cloud/ @jiasli @fengzhou-msft @Juliehzl
