--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -32,6 +32,7 @@
 /src/azure-cli/azure/cli/command_modules/dls/ @akharit @rahuldutta90 @Juliehzl @jsntcy
 /src/azure-cli/azure/cli/command_modules/dms/ @temandr @binuj
 /src/azure-cli/azure/cli/command_modules/eventhubs/ @v-ajnava
+/src/azure-cli/azure/cli/command_modules/eventgrid/ @Juliehzl @evelyn-ys @VidyaKukke
 /src/azure-cli/azure/cli/command_modules/extension/ @fengzhou-msft @msyyc
 /src/azure-cli/azure/cli/command_modules/hdinsight/ @aim-for-better @Juliehzl @kairu-ms
 /src/azure-cli/azure/cli/command_modules/iot/ @digimaun
