--- a/.azure-pipelines/templates/azdev_setup.yml
+++ b/.azure-pipelines/templates/azdev_setup.yml
@@ -13,7 +13,7 @@ steps:
       python -m venv env
       chmod +x env/bin/activate
       . env/bin/activate
-
+      python -m pip install -U pip
       pip install azdev==0.1.29
       azdev --version
 
