--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -1650,7 +1650,7 @@ eventgrid partner namespace event-channel create:
     activation_expiration_date:
       rule_exclusions:
       - option_length_too_long
-    desination_topic_name:
+    destination_topic_name:
       rule_exclusions:
       - option_length_too_long
     destination_resource_group_name:
