Add linter exclusion

--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -1656,6 +1656,7 @@ eventgrid partner namespace event-channel create:
     destination_resource_group_name:
       rule_exclusions:
       - option_length_too_long
+      - parameter_should_not_end_in_resource_group
     destination_subscription_id:
       rule_exclusions:
       - option_length_too_long
