--- a/src/azure-cli/requirements.py3.Darwin.txt
+++ b/src/azure-cli/requirements.py3.Darwin.txt
@@ -104,7 +104,7 @@ isodate==0.6.0
 Jinja2==2.11.3
 jmespath==0.9.5
 jsmin==2.2.2
-knack==0.8.0rc2
+knack==0.8.0
 MarkupSafe==1.1.1
 mock==4.0.2
 msal==1.10.0
