{EventGrid} Add support for StorageQueueMessageTTL, AdvancedFilters, EnableAdvancedFilteringOnArrays (#17440)
* Azure EventGrid: 2020-10-15-preview-Identity support for System MSI

* [EventGrid] Add support for System Topic MSI

* Remove secret and replace with <HIDDEN>

* Remove secret

* Add support for storage-queue-msg-ttl

* Add EnableAdvancedFilteringOnArrays + New AdvancedFilters

* enable_advanced_filtering_on_arrays arg type

* Fix broken tests

* Fix style error

* Address review comments

* address review comments

* Add linter exclusion

* Fix linter issue

* Address review comments

Co-authored-by: evelyn-ys <yishiwang@microsoft.com>

--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -1650,12 +1650,13 @@ eventgrid partner namespace event-channel create:
     activation_expiration_date:
       rule_exclusions:
       - option_length_too_long
-    desination_topic_name:
+    destination_topic_name:
       rule_exclusions:
       - option_length_too_long
     destination_resource_group_name:
       rule_exclusions:
       - option_length_too_long
+      - parameter_should_not_end_in_resource_group
     destination_subscription_id:
       rule_exclusions:
       - option_length_too_long
