--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -33,6 +33,7 @@
 /src/azure-cli/azure/cli/command_modules/eventhubs/ @v-ajnava
 /src/azure-cli/azure/cli/command_modules/eventgrid/ @Juliehzl @evelyn-ys @VidyaKukke
 /src/azure-cli/azure/cli/command_modules/extension/ @fengzhou-msft @msyyc
+/src/azure-cli/azure/cli/command_modules/feedback/ @fengzhou-msft @jiasli
 /src/azure-cli/azure/cli/command_modules/hdinsight/ @aim-for-better @Juliehzl @kairu-ms
 /src/azure-cli/azure/cli/command_modules/iot/ @digimaun
 /src/azure-cli/azure/cli/command_modules/keyvault/ @fengzhou-msft @yungezz @houk-ms
