--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -1621,6 +1621,12 @@ eventgrid event-subscription create:
     preferred_batch_size_in_kilobytes:
       rule_exclusions:
       - option_length_too_long
+    delivery_attribute_mapping:
+      rule_exclusions:
+      - option_length_too_long
+    include_static_delivery_attribute_secret:
+      rule_exclusions:
+      - option_length_too_long
 eventgrid event-subscription show:
   parameters:
     include_full_endpoint_url:
@@ -1640,6 +1646,12 @@ eventgrid event-subscription update:
     endpoint_type:
       rule_exclusions:
       - no_parameter_defaults_for_update_commands
+    delivery_attribute_mapping:
+      rule_exclusions:
+      - option_length_too_long
+    include_static_delivery_attribute_secret:
+      rule_exclusions:
+      - option_length_too_long
 eventgrid partner namespace create:
   parameters:
     partner_registration_id:
@@ -1722,6 +1734,12 @@ eventgrid partner topic event-subscription create:
     preferred_batch_size_in_kilobytes:
       rule_exclusions:
       - option_length_too_long
+    delivery_attribute_mapping:
+      rule_exclusions:
+      - option_length_too_long
+    include_static_delivery_attribute_secret:
+      rule_exclusions:
+      - option_length_too_long
 eventgrid partner topic event-subscription show:
   parameters:
     include_full_endpoint_url:
@@ -1732,6 +1750,12 @@ eventgrid partner topic event-subscription update:
     endpoint_type:
       rule_exclusions:
       - no_parameter_defaults_for_update_commands
+    delivery_attribute_mapping:
+      rule_exclusions:
+      - option_length_too_long
+    include_static_delivery_attribute_secret:
+      rule_exclusions:
+      - option_length_too_long
 eventgrid system-topic event-subscription create:
   parameters:
     azure_active_directory_application_id_or_uri:
@@ -1752,6 +1776,12 @@ eventgrid system-topic event-subscription create:
     preferred_batch_size_in_kilobytes:
       rule_exclusions:
       - option_length_too_long
+    delivery_attribute_mapping:
+      rule_exclusions:
+      - option_length_too_long
+    include_static_delivery_attribute_secret:
+      rule_exclusions:
+      - option_length_too_long
 eventgrid system-topic event-subscription show:
   parameters:
     include_full_endpoint_url:
@@ -1762,6 +1792,12 @@ eventgrid system-topic event-subscription update:
     endpoint_type:
       rule_exclusions:
       - no_parameter_defaults_for_update_commands
+    delivery_attribute_mapping:
+      rule_exclusions:
+      - option_length_too_long
+    include_static_delivery_attribute_secret:
+      rule_exclusions:
+      - option_length_too_long
 eventgrid topic create:
   parameters:
     input_mapping_default_values:
