--- a/src/azure-cli/azure/cli/command_modules/hdinsight/tests/latest/recordings/test_hdinsight_usage.yaml
+++ b/src/azure-cli/azure/cli/command_modules/hdinsight/tests/latest/recordings/test_hdinsight_usage.yaml
@@ -13,24 +13,24 @@ interactions:
       ParameterSetName:
       - -l
       User-Agent:
-      - python/3.7.2 (Windows-10-10.0.17763-SP0) msrest/0.6.7 msrest_azure/0.6.1 azure-mgmt-hdinsight/0.2.1
-        Azure-SDK-For-Python AZURECLI/2.0.69
+      - python/3.7.2 (Windows-10-10.0.19041-SP0) msrest/0.6.21 msrest_azure/0.6.3
+        azure-mgmt-hdinsight/2.2.0 Azure-SDK-For-Python AZURECLI/2.20.0
       accept-language:
       - en-US
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.HDInsight/locations/eastus2/usages?api-version=2018-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.HDInsight/locations/southcentralus/usages?api-version=2018-06-01-preview
   response:
     body:
-      string: '{"value":[{"unit":"Count","currentValue":0,"limit":60,"name":{"value":"cores","localizedValue":"Cores"}}]}'
+      string: '{"value":[{"unit":"Count","currentValue":212,"limit":3000,"name":{"value":"cores","localizedValue":"Cores"}}]}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '106'
+      - '110'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 26 Jul 2019 04:16:01 GMT
+      - Fri, 19 Mar 2021 14:26:34 GMT
       expires:
       - '-1'
       pragma:
@@ -44,7 +44,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-hdi-served-by:
-      - global
+      - southcentralus
     status:
       code: 200
       message: OK
