--- a/.azure-pipelines/templates/automation_test.yml
+++ b/.azure-pipelines/templates/automation_test.yml
@@ -3,10 +3,10 @@
 parameters:
 - name: pythonVersion
   type: string
-  default: ''
+  default: 3.8
 - name: profile
   type: string
-  default: ''
+  default: latest
 - name: fullTest
   displayName: 'Run full test?'
   type: boolean
